updated java to version 17, gradle and spring