@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.2.2.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'org.springframework.boot' version '2.6.0'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
 version = '1.0.0-SNAPSHOT'
@@ -9,10 +9,10 @@ version = '1.0.0-SNAPSHOT'
 group = 'com.fedorizvekov'
 description = 'Dynamic enum creation by reflection'
 
-sourceCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = JavaVersion.VERSION_17
 
 ext {
-    springBootVersion = '2.2.2.RELEASE'
+    springBootVersion = '2.6.0'
 }
 
 repositories {
@@ -47,7 +47,8 @@ compileJava {
 
 test {
     doFirst {
-        jvmArgs += ["--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED"]
+        jvmArgs += ["--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"]
+        jvmArgs += ["--add-opens", "java.base/jdk.internal.reflect=ALL-UNNAMED"]
     }
     useJUnitPlatform()
     testLogging {
